# api-gateway/openapi-dev.yaml
@@ -162,20 +162,31 @@ paths:
           description: Success
           schema:
             $ref: '#/definitions/ProfileResponse'
-
-  /auth/profile/avatar:
-    post:
-      summary: Uploader un Avatar
-      operationId: uploadAvatar
+    patch:
+      summary: Mettre à jour le profil (Update Profile)
+      operationId: updateProfile
+      parameters:
+        - name: name
+          in: formData
+          required: false
+          type: string
+        - name: phone
+          in: formData
+          required: false
+          type: string
+        - name: avatar
+          in: formData
+          required: false
+          type: file
+        - name: signature
+          in: formData
+          required: false
+          type: file
       responses:
         '200':
           description: Success
-    delete:
-      summary: Supprimer l'Avatar
-      operationId: deleteAvatar
-      responses:
-        '200':
-          description: Success
+          schema:
+            $ref: '#/definitions/ProfileResponse'
 
   /organisations:
     get:
@@ -1350,6 +1361,7 @@ definitions:
       email: { type: string }
       phone: { type: string }
       avatarUrl: { type: string }
+      signatureUrl: { type: string }
 
   OrganisationProfileItem:
     type: object
